fix: navbar navigation menu alignment

--- a/src/components/styles/navbar.scss
+++ b/src/components/styles/navbar.scss
@@ -52,7 +52,7 @@ $navbar-link-font-weight: 500;
         display: flex;
         position: relative;
         font-size: 1em;
-        bottom: 0.7em;
+        bottom: 0.3em;
 
         .navbar-menu-elements {
           width: 100%;
